tests/fixtures/LatestTests/ObjectTests/errors/assign_to_const_multiple_fields.fg
/; EXPECT_ERROR: InvalidAssignmentToConstantVariable
type Person = {
    name: str
    age: int
    email: str
}

const p: Person = {
    name: "John",
    age: 30,
    email: "john@example.com"
}

p.name = "Jane"
p.age = 25
